--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -62,7 +62,7 @@ jobs:
 
        - name: terraform apply
          id: apple
-         if: github.ref == 'refs/heads/main && github.event_name == 'push'
+         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
          run: terraform apply -auto-approve -input=false -parallelism=1 planfile
 
        - name: Configure AWS credentials
